@@ -1,8 +1,8 @@
-#!/bin/python
+#!/usr/bin/env python
 # Copyright Arvid Norberg 2008. Use, modification and distribution is
 # subject to the Boost Software License, Version 1.0. (See accompanying
 # file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
-
+from __future__ import print_function
 
 import libtorrent as lt
 import time
@@ -28,4 +28,3 @@ while (not h.is_seed()):
 	time.sleep(1)
 
 print(h.name(), 'complete')
-
